# adguard-home-toggle

./: Cargo.toml  LICENSE  PKGBUILD  README.md
src/: api.rs  config.rs  icons.rs  main.rs  osd.rs  tray.rs
